[tool.poetry]
name = "dice_maiden_ui"
version = "0.1.0"
description = "GUI application designed to generate dice maiden roll commands"
authors = ["Justin Martin <jjmardev@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
