[tool.poetry]
name = "dice_maiden_ui"
version = "1.0.11"
description = "GUI application designed to generate dice maiden roll commands"
authors = ["Justin Martin <jjmardev@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/jjmar/dice-maiden-ui"
repository = "https://github.com/jjmar/dice-maiden-ui"
include = ["data/configuration.schema"]

[tool.poetry.scripts]
dice_maiden_ui = "dice_maiden_ui.__main__:run"

[tool.poetry.dependencies]
python = "^3.6"
jsonschema = "^3.2.0"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
